# hwmocker

./: .clang-format  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  hwmocker.code-workspace
cmake/: config.cmake  helpers.cmake
docs/: hwmocker.xmi
include/: GenericIrq.hpp  Gpio.hpp  GpioController.hpp  GpioIrq.hpp  HwElement.hpp  HwIrq.hpp  IrqController.hpp  Pin.hpp  ProcessingUnit.hpp  SpiDevice.hpp  System.hpp  generic_irq.hh  hwmocker_internal.h
include/C-API/hwmocker/: config.h.in  hwmocker.h  irq.h
include/hwmocker/: config.h.in  hwmocker.h
src/: CMakeLists.txt  hwmocker.cpp
src/gpio/: Gpio.cpp  GpioController.cpp  GpioIrq.cpp
src/irq/: CMakeLists.txt  HwIrq.cpp  IrqController.cpp  irq.cpp
src/pin/: Pin.cpp
src/processingunit/: ProcessingUnit.cpp
src/spi/: CMakeLists.txt  SpiDevice.cpp
src/system/: System.cpp
tests/: CMakeLists.txt  test_gpio_irq.c  test_irq.c  test_spi.c
tests/config/: test_gpio_irq.hwmcnf  test_irq.hwmcnf  test_spi.hwmcnf
